--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </section>
         <section class="about-us">
 
-          <h3 class="about-header-name">About  Us </h3>
+          <h3 class="about-header-name">About  Me</h3>
 
            <div class="img-and-text flex jus-center tab-wrap mobile-wrap tab-center mobile-center">
 
@@ -283,6 +283,8 @@
 
                 <div class="wrapper-tablet-view str" style="display: flex;">
 
+                  <!-- <div style="border: 1px solid blue;height: 11rem;width: 4rem;"> -->
+
                 <div class="footer-contact">Contact Info
 
                 <div class="contact-wrapper firsr">
@@ -293,13 +295,6 @@
 
             </div>
 
-                <!-- <div class="contact-wrapper">
-
-                <div class="contact-img"><img src="call.png" alt="" srcset="" class="footer-contact-img"></div>
-
-                <div class="contact-details">+91-3333333333</div>
-
-            </div> -->
 
                 <div class="contact-wrapper sss">
 
@@ -309,8 +304,10 @@
 
             </div>
 
-        </div>
+        <!-- </div> -->
+      </div>
 
+      <div>
                 <div class="footer-follow-us">
 
                     <div class="footer-follow-us-name">Follow Us</div>
@@ -324,12 +321,13 @@
             </div>
 
         </div>
+      </div>
 
         <div class="second-footer">
 
             <div class="inner-second-footer">
 
-            &copy; 2023 Kailas Hostel
+            &copy; 2023 Nitin Khamamkar Photography
 
         </div>
 
