--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <nav class="menu">
             <ul class="top-menu flex justify-between items-center">
               <li class="pad-40">
-                <a class="active" href="#"> ABOUT US</a>
+                <a class="active" href="#about-us"> ABOUT ME</a>
               </li>
               <li class="pad-40">
                 <a href="#"> GALLERY </a>
@@ -46,7 +46,7 @@
         </div>
       </header>
       <main>
-        <section class="hero">
+        <section id="hero" class="hero">
           <div class="container flex wrap jus-center mobile-center">
             <div class="col-1 mobile-100">
               <h1 class="hero-head">Portraits that heal</h1>
@@ -54,9 +54,9 @@
             </div>
           </div>
         </section>
-        <section class="about-us">
+        <section id="about-us" class="about-us">
 
-          <h3 class="about-header-name">About  Me</h3>
+          <h3 class="about-header-name">About <span>Me</span></h3>
 
            <div class="img-and-text flex jus-center tab-wrap mobile-wrap tab-center mobile-center">
 
@@ -65,7 +65,7 @@
 
                    <div class="about-us-header-div">THE PERSON BEHIND THE CAMERA</div>
 
-                   <div class="about-us-description-div">My work is an expression of what I am most passionate about: storytelling, simplicity and human interaction. I see beauty in everything, everyone. Do you feel the same wayMy work is an expression of what I am most passionate about.</div>
+                   <div class="about-us-description-div">Hello there! I'm delighted to share my passion for photography with you. My name is Nitin, and I'm a devoted photography enthusiast, capturing the world's moments one frame at a time. Allow me to take you on a journey through my lens, where emotions, stories, and beauty merge to create timeless images.</div>
 
                </div>
                <div class="about-us-img width-100">
@@ -77,14 +77,14 @@
            </div>
 
        </section>
-        <section class="about-footer-1">
+        <section id="about-footer-1" class="about-footer-1">
           <div class="footer-txt-1 flex jus-center">
             <p>
               I'M A SELF TAUGHT PORTRAIT AND LIFESTYLE PHOTOGRAPHER, BASED IN CANADA. I'M A MINIMALIST, A VEGAN, A CERAMICS ARTISAN AND YOGA INSTRUCTOR.
             </p>
           </div>
         </section>
-        <section class="gallery">
+        <section id="gallery" class="gallery">
           <h1 class="text-center">Gallery</h1>
           <div class="inner-div">
           <div
@@ -121,19 +121,19 @@
           <button class="gal-button">View All</button></div>
         </div>
         </section>
-        <section class="gallery-footer-1">
+        <section id="gallery-footer-1" class="gallery-footer-1">
           <div class="footer-txt-2 flex jus-center">
             <p>
               I've been working in the field of photography for 10+ years and have covered almost every type of event and left all clients more than satisfied with my work.Here are the types of events I'm most experienced at.
             </p>
           </div>
         </section>
-        <section class="my-work">
+        <section id="my-work" class="my-work">
           <h1 class="text-center">My <span>Work</span></h1>
           <div class="work-wrapper flex jus-center tab-wrap mobile-wrap tab-center mobile-center">
             <div class="w-col w-col-1"><img src="./assets/media/Rectangle 19.png" alt="record"> <div class="arrow-right"><img src="./assets/media/formkit_arrowright.svg" alt="_arrow-right"></div><div class="w-txt">Wedding</div>  <div class="text">Wedding</div>
             <button class="button">View All</button></div>
-            <div class="w-col w-col-2"><img src="./assets/media/Rectangle 23.png" alt="record"><div class="arrow-right"><img src="./assets/media/formkit_arrowright.svg" alt="_arrow-right"></div><div class="w-txt">Architecure</div><div class="text">Architecure</div>
+            <div class="w-col w-col-2"><img src="./assets/media/Rectangle 23.png" alt="record"><div class="arrow-right"><img src="./assets/media/formkit_arrowright.svg" alt="_arrow-right"></div><div class="w-txt">Architecture</div><div class="text">Architecture</div>
             <button class="button">View All</button></div>
             <div class="w-col w-col-3"><img src="./assets/media/Rectangle 24.png" alt="record"><div class="arrow-right"><img src="./assets/media/formkit_arrowright.svg" alt="_arrow-right"></div><div class="w-txt">Sports</div><div class="text">Sports</div>
             <button class="button">View All</button></div>
@@ -141,7 +141,7 @@
             <button class="button">View All</button></div>
           </div>
         </section>
-        <section class="clients-say">
+        <section id="clients-say" class="clients-say">
           <h1 class="text-center">Clients <span>say</span></h1>
           <div class="col-main flex jus-center tab-wrap mobile-wrap">
             <div class="col">
@@ -167,7 +167,7 @@
             </div>
           </div>
         </section>
-        <section class="clients-footer">
+        <section id="clients-footer" class="clients-footer">
           <div class="footer-txt flex jus-center">
             <p>
               Thank you for considering our photography services. We look
@@ -176,7 +176,7 @@
             </p>
           </div>
         </section>
-        <section class="form-section">
+        <section id="form-section" class="form-section">
           <div class="inner-form-section">
               <div class="image-div">
                   <img src="./form-section/couple-image.png" alt="" srcset="" style="height: 100%;width:100%">
@@ -228,7 +228,7 @@
           </div>
       </section>
       </main>
-      <footer class="footer">
+      <footer id="footer" class="footer">
 
         <div class="first-footer">
 
@@ -269,7 +269,7 @@
 
                     <a href="kailasa.html#about-us"><div class="footer-link">About Us</div></a>
 
-                    <a href="kailasa.html#hostel-facility"><div class="footer-link">Hostel-Faciity</div></a>
+                    <a href="kailasa.html#hostel-facility"><div class="footer-link">Hostel</div></a>
 
                     <a href="kailasa.html"><div class="footer-link">Testimonial</div></a>
 
@@ -283,7 +283,7 @@
 
                 <div class="wrapper-tablet-view str" style="display: flex;">
 
-                  <!-- <div style="border: 1px solid blue;height: 11rem;width: 4rem;"> -->
+                  <div style="height: 10rem;width: 19rem;display: flex;flex-wrap: wrap;">
 
                 <div class="footer-contact">Contact Info
 
@@ -291,7 +291,7 @@
 
                 <div class="contact-img"><img src="./gallery/person_FILL0_wght300_GRAD0_opsz40.svg" alt="" srcset="" class="footer-contact-img"></div>
 
-                <div class="contact-details">contact person | Mr. kailas</div>
+                <div class="contact-details">Mr. kailas</div>
 
             </div>
 
@@ -304,7 +304,7 @@
 
             </div>
 
-        <!-- </div> -->
+        </div>
       </div>
 
       <div>
@@ -327,7 +327,7 @@
 
             <div class="inner-second-footer">
 
-            &copy; 2023 Nitin Khamamkar Photography
+            &copy; 2023 Kailas Hostel
 
         </div>
 
