--- a/gallery.html
+++ b/gallery.html
@@ -29,9 +29,9 @@
 
             <div class="container flex items-center justify-between">    
 
-              <a href="kailasa.html" class="logo">
+              <a href="./index.html" class="logo">
 
-                <img src="../assets/media/logo 1.png" alt="logo" />
+                <img src="./assets/media/logo 1.png" alt="logo" />
 
               </a>
 
@@ -107,13 +107,13 @@
 
                             <div class="first-row-first-div-img">
 
-                                <img src="./Rectangle 567.png" alt="567" srcset="" style="height: 100%;width:100%;">
+                                <img src="./assets/media/Rectangle 567.png" alt="567" srcset="" style="height: 100%;width:100%;">
 
                             </div>
 
                             <div class="first-row-second-div-img">
 
-                                <img src="./Rectangle 565.png" alt="565" srcset="" style="height: 100%;width:100%">
+                                <img src="./assets/media/Rectangle 566.png" alt="565" srcset="" style="height: 100%;width:100%">
 
                             </div>
 
@@ -121,7 +121,7 @@
 
                         <div class="first-row-second-div">
 
-                            <img src="./Rectangle 566.png" alt="566" srcset="" style="height: 100%;width:100%">
+                            <img src="./assets/media/Rectangle 565.png" alt="566" srcset="" style="height: 100%;width:100%">
 
                         </div>
 
@@ -129,9 +129,9 @@
 
                     <div class="second-row-images">
 
-                        <div class="second-row-first-img"><img src="./Rectangle 568.png" alt="" srcset="" style="height: 100%;width:100%"></div>
+                        <div class="second-row-first-img"><img src="./assets/media/Rectangle 568.png" alt="" srcset="" style="height: 100%;width:100%"></div>
 
-                        <div class="second-row-second-img"><img src="./Rectangle 569.png" alt="" srcset="" style="height: 100%;width:100%"></div>
+                        <div class="second-row-second-img"><img src="./assets/media/Rectangle 569.png" alt="" srcset="" style="height: 100%;width:100%"></div>
 
                     </div>
 
@@ -141,13 +141,13 @@
 
                         <div class="third-row-first-img">
 
-                            <img src="./Rectangle 574.png" alt="" srcset="" style="height: 100%;width:100%">
+                            <img src="./assets/media/Rectangle 574.png" alt="" srcset="" style="height: 100%;width:100%">
 
                         </div>
 
                         <div class="third-row-second-img">
 
-                             <img src="./Rectangle 575.png" alt="" srcset="" style="height: 100%;width:100%">
+                             <img src="./assets/media/Rectangle 575.png" alt="" srcset="" style="height: 100%;width:100%">
 
                         </div>
 
@@ -157,13 +157,13 @@
 
                         <div class="third-row-third-img">
 
-                            <img src="./Rectangle 576.png" alt="" srcset="" style="height: 100%;width:100%">
+                            <img src="./assets/media/Rectangle 576.png" alt="" srcset="" style="height: 100%;width:100%">
 
                         </div>
 
                         <div class="third-row-fourth-img">
 
-                            <img src="./Rectangle 577.png" alt="" srcset="" style="height: 100%;width:100%">
+                            <img src="./assets/media/Rectangle 577.png" alt="" srcset="" style="height: 100%;width:100%">
 
                         </div>
 
@@ -171,19 +171,19 @@
 
                     </div>
 
-                    <div class="forth-row-images"><img src="./Rectangle 578.png" alt="" srcset="" style="height: 100%;width:100%">
+                    <div class="forth-row-images"><img src="./assets/media/Rectangle 578.png" alt="" srcset="" style="height: 100%;width:100%">
 
                     </div>
 
                     <div class="fifth-row-images">
 
-                        <div class="fifth-row-first-div"><img src="./Rectangle 579.png" alt="" srcset="" style="height: 100%;width:100%"></div>
+                        <div class="fifth-row-first-div"><img src="./assets/media/Rectangle 579.png" alt="" srcset="" style="height: 100%;width:100%"></div>
 
                             <div class="fifth-row-second-div">
 
-                                <div class="fifth-row-first-img"><img src="./Rectangle 580.png" alt="" srcset="" style="height: 100%;width:100%"></div>
+                                <div class="fifth-row-first-img"><img src="./assets/media/Rectangle 580.png" alt="" srcset="" style="height: 100%;width:100%"></div>
 
-                                <div class="fifth-row-second-img"><img src="./Rectangle 581.png" alt="" srcset="" style="height: 100%;width:100%"></div>
+                                <div class="fifth-row-second-img"><img src="./assets/media/Rectangle 581.png" alt="" srcset="" style="height: 100%;width:100%"></div>
 
                             </div>
 
@@ -210,7 +210,7 @@
 
                         <div class="hostel-logo">
 
-                            <img src="../assets/media/logo 1.png" alt="logo" srcset="" class="hostel-logo-img">
+                            <img src="./assets/media/logo 1.png" alt="logo" srcset="" class="hostel-logo-img">
 
                         </div>
 
@@ -257,7 +257,7 @@
 
                     <div class="contact-wrapper firsr">
 
-                    <div class="contact-img"><img src="./person_FILL0_wght300_GRAD0_opsz40.svg" alt="" srcset="" class="footer-contact-img"></div>
+                    <div class="contact-img"><img src="./assets/media/person_FILL0_wght300_GRAD0_opsz40.svg" alt="" srcset="" class="footer-contact-img"></div>
 
                     <div class="contact-details">contact person | Mr. kailas</div>
 
@@ -273,7 +273,7 @@
 
                     <div class="contact-wrapper">
 
-                    <div class="contact-img"><img src="./mail_FILL0_wght300_GRAD0_opsz40.svg" alt="" srcset="" class="footer-contact-img"></div>
+                    <div class="contact-img"><img src="./assets/media/mail_FILL0_wght300_GRAD0_opsz40.svg" alt="" srcset="" class="footer-contact-img"></div>
 
                     <div class="contact-details">wellcometo@cometo.com</div>
 
@@ -285,7 +285,7 @@
 
                         <div class="footer-follow-us-name">Follow Us</div>
 
-                        <div class="footer-follow-us-logo"><img src="./Vector.svg" alt="" srcset="" class="facebook-logo"></div>
+                        <div class="footer-follow-us-logo"><img src="./assets/media/Vector.svg" alt="" srcset="" class="facebook-logo"></div>
 
                     </div>
 
@@ -315,7 +315,7 @@
 
                     <div class="mob-hostel-logo">
 
-                        <img src="../assets/media/logo 1.png" alt="" srcset="" class="mob-hostel-logo-img">
+                        <img src="./assets/media/logo 1.png" alt="" srcset="" class="mob-hostel-logo-img">
 
                     </div>
 
